--- a/views/partidos copy.ejs
+++ b/views/partidos copy.ejs
@@ -21,70 +21,35 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           
-          <nav class="navbar navbar-dark">      
-          </nav>            
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-  
+    <nav class="navbar navbar-dark">      
+      </nav>            
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" active" aria-current="page" href="/">Inicio</a>
-            </li>
-  
-  
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                2024Euro-América
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/calendario">Calendario</a></li>
-                <li><a class="dropdown-item" href="/ranking">Ranking</a></li>
-                <li><a class="dropdown-item" href="/partidos">Partidos</a></li>
-                <li><a class="dropdown-item" href="/paises">Paises</a></li>
-                <li><a class="dropdown-item" href="/estadios">Estadios</a></li>
-                <li><a class="dropdown-item" href="/resultados">Resultados</a></li>
-                <li><a class="dropdown-item" href="/quinielas">Quinielas</a></li>
-                <li><a class="dropdown-item" href="/guia">Guia</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="/mundiales">Mundiales</a></li>
-              </ul>
-            </li>
-  
-    
-            <li class="nav-item">
-              <a class="nav-link" href=""> </a>
+                  <a class="nav-link active" href="/">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/participantes">participantes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/puntosC">Puntos</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/quinielaC">Quiniela</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/ranking">Rankin</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=""> </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href=""> </a>
-            </li>
-  
-            <li class="nav-item">
-              <a class="nav-link" href="/acceso">Acceso</a>
-            </li>
-  
-  
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Pronosticos
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/quinielaC">Quiniela</a></li>
-                <li><a class="dropdown-item" href="/quiniela">Quiniela Consulta</a></li>
-                <li><a class="dropdown-item" href="/campeon">Campeón</a></li>
-                <li><a class="dropdown-item" href="/compara">Compara</a></li>
-                <li><a class="dropdown-item" href="/puntos">Puntos</a></li>
-              </ul>
-            </li>
-            
-            <li class="nav-item">
-              <a class="nav-link" href="/salir">Salir</a>
-            </li>
-  
+              <a class="nav-link" href="/campeon">Campeón</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/partidos">Partidos</a>
+        </li>
+
             </ul>
           </div>
         </div>
