--- a/views/quinielas.ejs
+++ b/views/quinielas.ejs
@@ -170,7 +170,7 @@
                 "targets": 3,
                 "data": 'ClaveL',
                 "render": function (data, type, row, meta) {
-                    return '<img src= resources/images/' + data + '1.png alt="' + data + '"height="50" width="50"/>';
+                    return '<img src= resources/images/Ba/' + data + '.png alt="' + data + '"height="50" width="50"/>';
                 }
             },
             {
@@ -178,10 +178,10 @@
                 "targets": 8,
                 "data": 'ClaveV',
                 "render": function (data, type, row, meta) {
-                    return '<img src= resources/images/' + data + '1.png alt="' + data + '"height="50" width="50"/>';
+                    return '<img src= resources/images/Ba/' + data + '.png alt="' + data + '"height="50" width="50"/>';
                 }
             }],
-    pageLength : 20,
+    pageLength : 21,
     order: [[1, 'asc']],
     responsive: true,
     language: {
