--- a/views/guia.ejs
+++ b/views/guia.ejs
@@ -122,6 +122,12 @@
        
       </div>
 
+      Hola
+
+      <div class="col">
+           <iframe width="560" height="315" src="https://cdrive.page.link/rd7afnru2RBZjCsT6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+
       
       <div class="col">
         
