--- a/views/ranking.ejs
+++ b/views/ranking.ejs
@@ -51,8 +51,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/calendario">Calendario</a></li>
-              <li><a class="dropdown-item" href="/ranking">Ranking</a></li>
-              <li><a class="dropdown-item" href="/partidos">Partidos</a></li>
+              <li><a class="dropdown-item" active" aria-current="page" href="/ranking">Ranking</a></li>
               <li><a class="dropdown-item" href="/paises">Paises</a></li>
               <li><a class="dropdown-item" href="/estadios">Estadios</a></li>
               <li><a class="dropdown-item" href="/resultados">Resultados</a></li>
@@ -63,7 +62,7 @@
             </ul>
           </li>
 
-  
+<!--   
           <li class="nav-item">
             <a class="nav-link" href=""> </a>
           </li>
@@ -95,7 +94,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/salir">Salir</a>
           </li>
-
+-->
         </ul>
       </div>
     </div>
