--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -10,9 +10,10 @@
    
     <link rel="stylesheet" href="resources/css/style2.css">
     <link  rel="stylesheet" href="resources/css/ventanas.css" >
-    <link rel="icon" href="resources/images/Z_pngwing_estadio.png">
+    <link  rel="stylesheet" href="resources/css/estilos.css" >
+    <link rel="icon" href="resources/images/Z_pngwing_CalAzteca.png">
 
-    <title>ESTADIO </title>
+    <title>CALENDARIO </title>
 </head>
 <body>
 
@@ -35,21 +36,17 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/calendario">Calendario</a></li>
-              <li><a class="dropdown-item" href="/ranking">Ranking</a></li>
               <li><a class="dropdown-item" href="/paises">Paises</a></li>
-              <li><a class="dropdown-item" active" aria-current="page"  href="/estadios">Estadios</a></li>
+              <li><a class="dropdown-item" href="/estadios">Estadios</a></li>
               <li><a class="dropdown-item" href="/resultados">Resultados</a></li>
               <li><a class="dropdown-item" href="/quinielas">Quinielas</a></li>
               <li><a class="dropdown-item" href="/guia">Guia</a></li>
-<!--
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="/mundiales">Mundiales</a></li>
               <li><a class="dropdown-item" href="/musica">Musica</a></li>
--->              
             </ul>
           </li>
-
-<!--           
+  
           <li class="nav-item">
             <a class="nav-link" href=""> </a>
           </li>
@@ -71,6 +68,8 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/quinielaC">Quiniela</a></li>
+              <li><a class="dropdown-item" href="/quiniela">Quiniela Consulta</a></li>
+              <li><a class="dropdown-item" href="/campeon">Campeón</a></li>
               <li><a class="dropdown-item" href="/compara">Compara</a></li>
               <li><a class="dropdown-item" href="/puntos">Puntos</a></li>
             </ul>
@@ -80,7 +79,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/salir">Salir</a>
           </li>
--->
+          
         </ul>
       </div>
     </div>
@@ -89,62 +88,122 @@
       <div class="flex-container-tit">
         <div class="flex-titulo">   
           <div class="cat">
-            <img src="resources/images/Z_pngwing_estadio.png" />               
+            <img src="resources/images/Z_pngwing_CalAzteca.png" />               
           </div>
         </div>
 
         <div class="flex-titulo">   
-            <h1>  ESTADIOS </h1>
+            <h1>  CALENDARIO </h1>
         </div>
     </div>
     <br>
       <div class="flex-container">
+        <div id="cuenta"></div>
         <div class="container">
-          <div class="row">
-      <table id="estadios" class="table table-bordered table-striped text-center mt-4">
+          
+          
+      <table id="partidos" class="table table-bordered table-striped text-center mt-4">
         <thead>
           <tr class="text-white" style="background-color:#6200ee;">
-            <th scope="col">NUM</th>
-            <th scope="col">ESTADIO</th>
-            <th scope="col">PAIS</th>         
-          </tr>
-        </thead>
-        <tfoot>
-          <tr class="text-white" style="background-color:#6200ee;">
-            <th scope="col">NUM</th>
-            <th scope="col">ESTADIO</th>
-            <th scope="col">PAIS</th>
-          </tr>
-          </tfoot>   
-      </table>
-      </div>
-      
+            <th scope="col">Num</th>
+            <th scope="col">Local</th>
+            <th scope="col">Bl</th>
+            <th scope="col">Bv</th>
+            <th scope="col">Visitante</th>
+            <th scope="col">Fecha</th>   
+            <th scope="col">Horario</th> 
+            <th scope="col">Estadio</th>
+            <th scope="col" class="hidden-xs">E</th>         
+      </tr>
+    </thead>
+    <tfoot>
+      <tr class="text-white" style="background-color:#6200ee;">
+        <th scope="col">Num</th>
+        <th scope="col">Local</th>
+        <th scope="col">Bl</th>
+        <th scope="col">Bv</th>
+        <th scope="col">Visitante</th>
+        <th scope="col">Fecha</th>   
+        <th scope="col">Horario</th> 
+        <th scope="col">Estadio</th>  
+        <th scope="col" class="hidden-xs">E</th>     
+      </tr>
+    </tfoot>
+  </table>  
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>  
+
+</div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>  
   <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
-  <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
-  <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap5.min.js"></script>        
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-  
+
+	<script src="resources/css/simplyCountdown.min.js"></script>
+	<script src="resources/css/countdown.js"></script>
+
+
+  <script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.bootstrap5.min.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.3.0/js/dataTables.responsive.min.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.3.0/js/responsive.bootstrap5.js"></script>
+
   <script> 
 
-  $('#estadios').DataTable({    
+  $('#partidos').DataTable({   
     ajax: {
-        url: "/estadios_data",
+        url: "/calendario_data",       
         dataSrc: ""
     },   
-    columns: [      
-        {'data': 'Id'},
+    columns: [ 
+        {"data": "Id"},        
+        {'data': 'Local'},
+        {'data': 'ClaveL'},
+        {'data': 'ClaveV'},
+        {'data': 'Visitante'},
+        {'data': 'Fecha'},
+        {'data': 'Horario'},
         {'data': 'Estadio'},
-        {'data': 'Pais'},
-    ],
+        {'data': 'Estatus' ,'visible' : false},
+        ],
+        columnDefs:
+            [{
+              "className": "dt-center", "targets": "_all",
+                "targets": 2,
+                "data": 'ClaveL',
+                "render": function (data, type, row, meta) {
+                    return '<img src= resources/images/' + data + '1.png alt="' + data + '"height="58" width="90"/>';
+                }
+            },
+            {
+              "className": "dt-center", "targets": "_all",
+                "targets": 3,
+                "data": 'ClaveV',
+                "render": function (data, type, row, meta) {
+                    return '<img src= resources/images/' + data + '1.png alt="' + data + '"height="58" width="90"/>';
+                }
+            }],
     responsive: true,
+    order: [[8, 'asc']],
     language: {
             url: '//cdn.datatables.net/plug-ins/1.11.5/i18n/es-ES.json',
         },
-    pageLength : 14,
+    pageLength : 20,
+    buttons: 
+			{
+				extend:    'excelHtml5',
+				text:      '<i class="fas fa-file-excel"></i> ',
+				titleAttr: 'Exportar a Excel',
+        charset: 'utf-8',
+				className: 'btn btn-success'
+			},
+      dom: 'ftilBp', 
     lengthMenu: [[5, 10, 20, -1], [5, 10, 20, 'Todos']]     
   }); 
+
 
   </script>
 
