--- a/views/paises.ejs
+++ b/views/paises.ejs
@@ -36,7 +36,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/calendario">Calendario</a></li>
               <li><a class="dropdown-item" href="/ranking">Ranking</a></li>
-              <li><a class="dropdown-item" href="/paises">Paises</a></li>
+              <li><a class="dropdown-item" active" aria-current="page" href="/paises">Paises</a></li>
               <li><a class="dropdown-item" href="/estadios">Estadios</a></li>
               <li><a class="dropdown-item" href="/resultados">Resultados</a></li>
               <li><a class="dropdown-item" href="/quinielas">Quinielas</a></li>
@@ -45,7 +45,6 @@
                 <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="/mundiales">Mundiales</a></li>
               <li><a class="dropdown-item" href="/musica">Musica</a></li>
--->              
             </ul>
           </li>
   
@@ -81,6 +80,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/salir">Salir</a>
           </li>
+ -->
 
         </ul>
       </div>
