--- a/views/quinielas.ejs
+++ b/views/quinielas.ejs
@@ -39,7 +39,7 @@
                   <li><a class="dropdown-item" href="/paises">Paises</a></li>
                   <li><a class="dropdown-item" href="/estadios">Estadios</a></li>
                   <li><a class="dropdown-item" href="/resultados">Resultados</a></li>
-                  <li><a class="dropdown-item" href="/quinielas">Quinielas</a></li>
+                  <li><a class="dropdown-item" active" aria-current="page" href="/quinielas">Quinielas</a></li>
                   <li><a class="dropdown-item" href="/guia">Guia</a></li>
 <!--
                     <li><hr class="dropdown-divider"></li>
@@ -48,7 +48,9 @@
 -->                  
                 </ul>
               </li>
-      
+
+
+<!--       
               <li class="nav-item">
                 <a class="nav-link" href=""> </a>
               </li>
@@ -81,7 +83,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="/salir">Salir</a>
               </li>
-              
+-->              
             </ul>
           </div>
         </div>
