--- a/views/guia.ejs
+++ b/views/guia.ejs
@@ -35,19 +35,15 @@
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           2024Euro-América
         </a>
+
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
           <li><a class="dropdown-item" href="/calendario">Calendario</a></li>
           <li><a class="dropdown-item" href="/ranking">Ranking</a></li>
           <li><a class="dropdown-item" href="/paises">Paises</a></li>
           <li><a class="dropdown-item" href="/estadios">Estadios</a></li>
-          <li><a class="dropdown-item" href="/resultados">Resultados</a></li>
+          <li><a class="dropdown-item active" aria-current="page" href="/resultados">Resultados</a></li>
           <li><a class="dropdown-item" href="/quinielas">Quinielas</a></li>
-              <li><a class="dropdown-item" href="/guia">Guia</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="/mundiales">Mundiales</a></li>
-          <li><a class="dropdown-item" href="/musica">Musica</a></li>
-        </ul>
-      </li>
+          <li><a class="dropdown-item" href="/guia">Guia</a></li>        
 
       <li class="nav-item">
         <a class="nav-link" href=""> </a>
@@ -90,11 +86,11 @@
     <div class="Lpzcontainer">
 
       <div class="Ranking">
-         
+ <!--        
         <div class="col">
           <img src="resources/images/Z_Guia1.PNG" class="rounded float-end" alt="..." >
         </div>
-
+-->
         <div class="col">
           <img src="resources/images/Z_Guia2.PNG" class="rounded float-end" alt="..." >
         </div>
@@ -116,6 +112,8 @@
           <img src="resources/images/Z_Guia4.PNG" class="rounded float-end" alt="..." >
         </div>
 
+<!-- 
+
         <div class="col">
         
           <iframe width="560" height="415" src="https://www.youtube.com/embed/TyL6_gUQmIo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -128,6 +126,7 @@
            <iframe width="560" height="315" src="https://cdrive.page.link/rd7afnru2RBZjCsT6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 
+
       
       <div class="col">
         
@@ -139,7 +138,7 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/Taa0aoD4aUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
   </div>
-
+-->
         </div>
 
         <div class="Ranking_img2">
