--- a/views/guia.ejs
+++ b/views/guia.ejs
@@ -41,10 +41,10 @@
           <li><a class="dropdown-item" href="/ranking">Ranking</a></li>
           <li><a class="dropdown-item" href="/paises">Paises</a></li>
           <li><a class="dropdown-item" href="/estadios">Estadios</a></li>
-          <li><a class="dropdown-item active" aria-current="page" href="/resultados">Resultados</a></li>
+          <li><a class="dropdown-item"  href="/resultados">Resultados</a></li>
           <li><a class="dropdown-item" href="/quinielas">Quinielas</a></li>
-          <li><a class="dropdown-item" href="/guia">Guia</a></li>        
-
+          <li><a class="dropdown-item" active" aria-current="page" href="/guia">Guia</a></li>        
+ 
       <li class="nav-item">
         <a class="nav-link" href=""> </a>
       </li>
